WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131629
REGRESSION (WebKit2 View Gestures): Double-tap doesn't work properly when there's no element underneath the cursor
https://bugs.webkit.org/show_bug.cgi?id=131629
Summary
REGRESSION (WebKit2 View Gestures): Double-tap doesn't work properly when the...
Tim Horton
Reported
2014-04-14 12:32:31 PDT
If there's nothing under the cursor, zoom towards the cursor instead of towards 0,0. <
rdar://problem/16192821
>
Attachments
patch
(1.87 KB, patch)
2014-04-14 12:34 PDT
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-14 12:34:45 PDT
Created
attachment 229300
[details]
patch
Tim Horton
Comment 2
2014-04-14 14:38:39 PDT
http://trac.webkit.org/changeset/167268
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug