REGRESSION (WebKit2 View Gestures): Double-tap doesn't work properly when there's no element underneath the cursor https://bugs.webkit.org/show_bug.cgi?id=131629 <rdar://problem/16192821>

Reviewed by Dan Bernstein.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::didCollectGeometryForSmartMagnificationGesture):
If there's nothing under the cursor, zoom towards the cursor instead of towards 0,0.


Canonical link: https://commits.webkit.org/149709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167268 268f45cc-cd09-0410-ab3c-d52691b4dbfc